=== rmw ChangeLog ===
rmw ChangeLog

2018-11-04

* When running purge, rmw will now show the total number of files and
  directories deleted, as well as the amount of bytes that were freed.

2018-10-30

* `rmw -s` now returns a sorted list of files

2018-10-26

* PROTECT feature removed

2018-10-24

* released rmw v0.4.05

2018-10-22

* tests for the Restore feature have been added.
* The configuration file (rmwrc) is no longer installed when `make
  install` is run.

2018-10-21

* test scripts are now run using 'make test-...' from the test directory

2018-10-11

* fr_FR translation added


2018-10-02

* de_DE translation added

2018-02-13

    libtool removed from configure

    Translations added:
      es_AR
      es_ES
      pt_BR

2018-01-14

    [#162] es_MX (Spanish Mexican) translation added /thanks @marioecg

2018-01-07

    Added test script (test/purging.sh)

2018-01-03

    [#133] Improve handling of plural forms (for translations);
    introduce the use of ngettext

    Added test script (test/basic.sh)

2018-01-01

    Ukrainian (uk) translation added /thanks @Svitlana Galianova

2017-12-31

    Russian (ru) translation added /thanks @Svitlana Galianova

2017-12-27

    rmw-0.4.03 released

2017-12-26

    [#140] Bugfix: rmw will now create the files/ and info/ directories
    without displaying an error message. This happened if there was only
    one WASTE folder in the config file, and if the files/ and info/
    hadn't been created yet.

2017-12-25

    Portuguese (pt_PT) translation added / thanks @jmrodriguesgoncalves


2017-12-20

    rmw-0.4.01 released

2017-12-15

    Polish and Nepali translations added. Thanks @suve and @ramdahal

    Nepali man page added.

2017-12-08

    Finnish translation added / thanks @sapake


2017-12-07

    The log entry from 2017-12-06 is now obsolete. If purge_after is > 0, rmw
    will only  show the message "purge has been skipped: use -f or --force"