@@ -130,8 +130,7 @@ enum {
   ERR_CLOSE,
   ERR_FGETS,
   ERR_TRASHINFO_FORMAT,
-  FILE_NOT_FOUND,
-  ERR_OPEN_CONFIG
+  FILE_NOT_FOUND
 };
 
 #endif
